Update contact section with LinkedIn details
Added LinkedIn contact information with a link.

--- a/index.html
+++ b/index.html
@@ -115,11 +115,18 @@ I aim to grow as a cybersecurity professional by consistently learning new techn
 <section class="contact">
 
 <h2>Get In Touch</h2>
-
 <p class="mail">
-<i class='bx bx-envelope'></i>
-bandamakarsh@gmail.com
+  <i class='bx bx-envelope'></i>
+  <a href="mailto:bandamakarsh@gmail.com">bandamakarsh@gmail.com</a>
 </p>
+
+<p class="linkedin">
+  <i class='bx bxl-linkedin'></i>
+  <a href="https://www.linkedin.com/in/bandam-akarsh-5580a8303" target="_blank">
+    Bandam Akarsh
+  </a>
+</p>
+
 
 </section>
 
