Add professional certification details to index.html

--- a/index.html
+++ b/index.html
@@ -94,22 +94,29 @@ I aim to grow as a cybersecurity professional by consistently learning new techn
 </section>
 
 <!-- CERTIFICATIONS -->
-<section class="cert">
+
+  <section class="cert">
 
 <h2>Professional Certifications</h2>
 
 <div class="cert-card">
 
 <h3>AWS Academy Graduate – Cloud Foundations</h3>
-<p>Training Badge</p>
 
-<a href="#" class="verify">
-<i class='bx bx-link-external'></i> Verify Credential
-</a>
+<p><strong>Issued to:</strong> BANDAM AKARSH</p>
+<p><strong>Date:</strong> 11/06/2025</p>
+<p><strong>Duration:</strong> 20 Hours</p>
+
+<p>
+    <a href="https://www.credly.com/go/u3xpetSk" target="_blank" class="cert-btn">
+        View Credential
+    </a>
+</p>
 
 </div>
 
 </section>
+
 
 <!-- CONTACT -->
 <section class="contact">
