Update credential link with icon and text

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@ I aim to grow as a cybersecurity professional by consistently learning new techn
 
 <p>
     <a href="https://www.credly.com/go/u3xpetSk" target="_blank" class="cert-btn">
-        View Credential
-    </a>
+    <span class="icon">🔗</span>
+    <span class="text">View Credential</span>
+</a>
+
 </p>
 
 </div>
