--- a/index.html
+++ b/index.html
@@ -101,23 +101,26 @@ I aim to grow as a cybersecurity professional by consistently learning new techn
 
 <div class="cert-card">
 
-<h3>AWS Academy Graduate – Cloud Foundations</h3>
+    <div class="cert-header">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" 
+             alt="AWS Logo" class="cert-logo">
 
-<p><strong>Issued to:</strong> BANDAM AKARSH</p>
-<p><strong>Date:</strong> 11/06/2025</p>
-<p><strong>Duration:</strong> 20 Hours</p>
+        <div>
+            <h3>AWS Academy Graduate – Cloud Foundations</h3>
+            <p><strong>Issued to:</strong> BANDAM AKARSH</p>
+            <p><strong>Date:</strong> 11/06/2025</p>
+            <p><strong>Duration:</strong> 20 Hours</p>
+        </div>
+    </div>
 
-<p>
     <a href="https://www.credly.com/go/u3xpetSk" target="_blank" class="cert-btn">
-    <span class="icon">🔗</span>
-    <span class="text">View Credential</span>
-</a>
-
-</p>
+        View Credential ↗
+    </a>
 
 </div>
 
 </section>
+
 
 
 <!-- CONTACT -->
